# second_edition_spellbook

./: .gitignore  AGENTS.md  README.md  agents.md  skills-lock.json  spec_1_local_ad_d_2_e_spellbook.md  spec_2_12th_circle_spells.md  spec_3_character_profiles_feature.md  spec_4_classes_spell_lists_feature.md
apps/desktop/src-tauri/: AGENTS.md  Cargo.toml  build.rs  clippy_output.txt  tauri.conf.json  test_errors.txt  test_full_output.txt  test_output.txt  test_output_round2.txt
apps/desktop/src-tauri/schemas/: spell.schema.json
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  schema.sql
apps/desktop/src-tauri/src/commands/: characters.rs  export.rs  import.rs  io_character.rs  llm.rs  mod.rs  provisioning.rs  search.rs  spells.rs  vault.rs
apps/desktop/src-tauri/src/db/: migrations.rs  mod.rs  pool.rs  utils.rs
apps/desktop/src-tauri/src/models/: area_spec.rs  canonical_spell.rs  canonical_spell_regression_tests.rs  character.rs  damage.rs  duration_spec.rs  experience.rs  import.rs  llm.rs  magic_resistance.rs  material.rs  mod.rs  range_spec.rs  saving_throw.rs  scalar.rs  spell.rs
apps/desktop/src-tauri/src/utils/: migration_manager.rs  mod.rs  spell_parser.rs
apps/desktop/src-tauri/src/utils/parsers/: area.rs  components.rs  duration.rs  mechanics.rs  mod.rs  range.rs
spellbook/apps/desktop/src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
spellbook/apps/desktop/src-tauri/resources/: spell.schema.json
spellbook/apps/desktop/src-tauri/schemas/: spell.schema.json
spellbook/apps/desktop/src-tauri/src/: lib.rs  main.rs
spellbook/apps/desktop/src-tauri/src/commands/: characters.rs  export.rs  import.rs  io_character.rs  mod.rs  search.rs  spells.rs  vault.rs
spellbook/apps/desktop/src-tauri/src/db/: migrations.rs  mod.rs  pool.rs
spellbook/apps/desktop/src-tauri/src/models/: area_spec.rs  canonical_spell.rs  character.rs  damage.rs  duration_spec.rs  experience.rs  import.rs  material.rs  mod.rs  range_spec.rs  saving_throw.rs  scalar.rs  search.rs  spell.rs
spellbook/apps/desktop/src-tauri/src/sidecar/: client.rs  mod.rs
spellbook/apps/desktop/src-tauri/src/utils/: migration_manager.rs  mod.rs  spell_parser.rs
spellbook/apps/desktop/src-tauri/src/utils/parsers/: area.rs  components.rs  duration.rs  mechanics.rs  (+1 more)
(+753 files in other folders)
