[package]
name = "spellbook-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "test"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
wait-timeout = "0.2"
walkdir = "2.5"
zip = "2.2"
sqlite-vec = "0.1.6"
tokio = { version = "1.49.0", features = ["process", "io-util"] }
regex = "1.12.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.10"
